--- a/res-alternative/visage.css
+++ b/res-alternative/visage.css
@@ -73,26 +73,28 @@
 }
 
 #visage-nav-prev {
+	position: fixed;
 	z-index: 300030;
-	left: 50%;
-	top: 100%;
-	height: 20px;
-	width: 20px;
-	margin-top: -10px;
-	margin-left: -25px;
+	left: 0px;
+	top: 50%;
+	height: 100px;
+	width: 50px;
+	margin-top: -50px;
+	margin-left: -2px;
 	background: transparent url("prev.png") no-repeat scroll center left;
 	cursor: pointer;
 }
 
 #visage-nav-next {
+	position: fixed;
 	z-index: 300030;
-	left: 50%;
-	top: 100%;
-	height: 20px;
-	width: 20px;
-	margin-top: -10px;
-	margin-left: 5px;
-	background: transparent url("next.png") no-repeat scroll center right;
+	right: 0px;
+	top: 50%;
+	height: 100px;
+	width: 50px;
+	margin-top: -50px;
+	margin-right: -2px;
+	background: transparent url("next.png") no-repeat scroll center left;
 	cursor: pointer;
 }
 
@@ -100,18 +102,19 @@
 	z-index: 300005;
 	right: 0%;
 	top: 0%;
-	height: 20px;
-	width: 20px;
-	margin-top: 10px;
-	margin-right: 10px;
+	height: 62px;
+	width: 62px;
+	margin-top: -2px;
+	margin-right: -2px;
 	background: transparent url("close.png") no-repeat scroll top right;
 	cursor: pointer;
 }
 
 #visage-count {
+	position: fixed;
 	z-index: 300015;
-	left: 0%;
-	bottom: 100%;
+	left: 1em;
+	top: 0.3em;
 	padding: 4px 0px;
 	color: #bbbbbb;
 	font-size: 10px;
@@ -119,9 +122,12 @@
 }
 
 #visage-title {
+	position: fixed;
 	z-index: 300020;
-	right: 0%;
-	bottom: 100%;
+	text-align: center;
+	width: 100%;
+	left: 0;
+	top: 0.3em;
 	padding: 4px 0px;
 	color: white;
 	font-size: 12px;
