--- a/res/visage.css
+++ b/res/visage.css
@@ -45,7 +45,7 @@
 	overflow: visible; /* So that elements around #visage element (moved outside with negative margins) are shown in all browsers */
 }
 
-#visage-image-contain {
+#visage-container {
 	width: 100%;
 	height: 100%;
 	margin: 0px;
@@ -73,48 +73,55 @@
 }
 
 #visage-nav-prev {
-	position: fixed;
 	z-index: 300030;
-	left: 0px;
-	top: 50%;
-	height: 100px;
-	width: 50px;
-	margin-top: -50px;
-	margin-left: -2px;
+	left: 50%;
+	top: 100%;
+	height: 20px;
+	width: 20px;
+	margin-top: -10px;
+	margin-left: -25px;
 	background: transparent url("prev.png") no-repeat scroll center left;
 	cursor: pointer;
 }
 
 #visage-nav-next {
-	position: fixed;
 	z-index: 300030;
-	right: 0px;
-	top: 50%;
-	height: 100px;
-	width: 50px;
-	margin-top: -50px;
-	margin-right: -2px;
-	background: transparent url("next.png") no-repeat scroll center left;
+	left: 50%;
+	top: 100%;
+	height: 20px;
+	width: 20px;
+	margin-top: -10px;
+	margin-left: 5px;
+	background: transparent url("next.png") no-repeat scroll center right;
 	cursor: pointer;
+}
+
+#visage-nav-prev.visage-nav-disabled {
+	background: transparent url("prev_disabled.png") no-repeat scroll center left;
+	cursor: default;
+}
+
+#visage-nav-next.visage-nav-disabled {
+	background: transparent url("next_disabled.png") no-repeat scroll center right;
+	cursor: default;
 }
 
 #visage-close {
 	z-index: 300005;
 	right: 0%;
 	top: 0%;
-	height: 62px;
-	width: 62px;
-	margin-top: -2px;
-	margin-right: -2px;
+	height: 20px;
+	width: 20px;
+	margin-top: 10px;
+	margin-right: 10px;
 	background: transparent url("close.png") no-repeat scroll top right;
 	cursor: pointer;
 }
 
 #visage-count {
-	position: fixed;
 	z-index: 300015;
-	left: 1em;
-	top: 0.3em;
+	left: 0%;
+	bottom: 100%;
 	padding: 4px 0px;
 	color: #bbbbbb;
 	font-size: 10px;
@@ -122,12 +129,9 @@
 }
 
 #visage-title {
-	position: fixed;
 	z-index: 300020;
-	text-align: center;
-	width: 100%;
-	left: 0;
-	top: 0.3em;
+	right: 0%;
+	bottom: 100%;
 	padding: 4px 0px;
 	color: white;
 	font-size: 12px;
