--- a/res-alt/visage.css
+++ b/res-alt/visage.css
@@ -51,7 +51,7 @@
 	margin: 0px;
 	padding: 0px;
 	border: none;
-	background: transparent url("loading.gif") no-repeat scroll center center;
+	background: transparent url("images/loading.gif") no-repeat scroll center center;
 }
 
 #visage-alt-image {
@@ -79,7 +79,7 @@
 	height: 100px;
 	width: 50px;
 	margin-top: -50px;
-	background: transparent url("prev.png") no-repeat scroll center left;
+	background: transparent url("images/prev.png") no-repeat scroll center left;
 	cursor: pointer;
 }
 
@@ -90,17 +90,17 @@
 	height: 100px;
 	width: 50px;
 	margin-top: -50px;
-	background: transparent url("next.png") no-repeat scroll center right;
+	background: transparent url("images/next.png") no-repeat scroll center right;
 	cursor: pointer;
 }
 
 #visage-alt-nav-prev.visage-alt-nav-disabled {
-	background: transparent url("prev_disabled.png") no-repeat scroll center left;
+	background: transparent url("images/prev_disabled.png") no-repeat scroll center left;
 	cursor: default;
 }
 
 #visage-alt-nav-next.visage-alt-nav-disabled {
-	background: transparent url("next_disabled.png") no-repeat scroll center right;
+	background: transparent url("images/next_disabled.png") no-repeat scroll center right;
 	cursor: default;
 }
 #visage-alt-close {
@@ -109,7 +109,7 @@
 	top: 0px;
 	height: 62px;
 	width: 62px;
-	background: transparent url("close.png") no-repeat scroll top right;
+	background: transparent url("images/close.png") no-repeat scroll top right;
 	cursor: pointer;
 }
 
